# Mini_Miner

./: .gitignore  README.md  pyproject.toml  setup.py
mini_miner/: constants.py  miniminer.py
